package java_design_patterns.D_bridge.draw;

public interface Drawer {
     void drawCircle(int radius, int x, int y);
}
